ingress_nginx/Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/component: controller
  name: ingress-nginx-system-controller-admission
  namespace: ingress-nginx-system
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
  selector:
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/component: controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/component: controller
  name: ingress-nginx-system-controller
  namespace: ingress-nginx-system
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      nodePort: 30080
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      nodePort: 30443
    - name: kafka-1
      port: 9001
      protocol: TCP
    - name: kafka-2
      port: 9002
      protocol: TCP
    - name: kafka-3
      port: 9003
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx-system
    app.kubernetes.io/instance: ingress-nginx-system
    app.kubernetes.io/component: controller
